--- a/ts/package.json
+++ b/ts/package.json
@@ -12,7 +12,9 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@types/sinon": "^17.0.3",
     "@types/tape": "^5.6.4",
+    "sinon": "^17.0.1",
     "tape": "^5.7.2",
     "ts-node": "^10.9.1"
   }
